--- a/landingpages/psg-neymar/index.html
+++ b/landingpages/psg-neymar/index.html
@@ -8,25 +8,36 @@
     <title> PSG x Montepellier - placar</title>
 </head>
 <body>
-    <header class="cabecalho">
-        <img class="imagen-cabecalho" src="img/psg logo.png" alt="">
-        <nav class="menu">
-            <a class="menu-item" href="#">Inicio</a>
-            <a class="menu-item" href="#">Resultados</a>
-            <a class="menu-item" href="#">Noticias</a>
-            <a class="menu-item" href="#">Clubes</a>
-            <a class="menu-item" href="#">Lojas</a>
-        </nav>
-        <div class="menu-button">
-            <button id="entrar">ENTRAR</button>
-            <button id="registre">REGISTRE-SE</button>
-        </div>
-    </header>
+    <div class="bg-neymar">
+        <header class="cabecalho">
+            <img class="imagen-cabecalho" src="imagens/psg logo.png" alt="">
+            <nav class="menu">
+                <a class="menu-item" href="#">Inicio</a>
+                <a class="menu-item" href="#">Resultados</a>
+                <a class="menu-item" href="#">Noticias</a>
+                <a class="menu-item" href="#">Clubes</a>
+                <a class="menu-item" href="#">Lojas</a>
+            </nav>
+            <div class="menu-button">
+                <button id="entrar">ENTRAR</button>
+                <button id="registre">REGISTRE-SE</button>
+            </div>
+        </header>
+        <main class="conteudo-principal">
+            <h1 class="conteudo-titulo">NEYMAR JR</h1>
+            <p class="conteudo-paragrafo">“Tenho Messi e Cristiano Ronaldo como <br> ídolos. Se der para pegar um pouquinho <br> de cada um, fico muito feliz.” </p>
+            <button class="conteudo-button">LER MATÉRIA</button>
+        </main>
+    </div>
 
-    <main class="conteudo-principal">
-        <h1 class="conteudo-titulo">NEYMAR JR</h1>
-        <p class="conteudo-paragrafo">“Tenho Messi e Cristiano Ronaldo como <br> ídolos. Se der para pegar um pouquinho <br> de cada um, fico muito feliz.” </p>
-        <button class="conteudo-button">LER MATÉRIA</button>
-    </main>
+    <div class="placar">
+            <h4 id="time1">Montpellier</h4>
+            <img class="time1" src="imagens/montpellier-logo.png" alt="">
+            <h2 class="numero-placar">0</h2>
+            <p class="traco-placar">-</p>
+            <h2 class="numero-placar">4</h2>
+            <img class="time2" src="imagens/psg-logo.png" alt="">
+            <h4 id="time2">PSG</h4>
+    </div>
 </body>
 </html>
