--- a/landingpages/psg-neymar/index.html
+++ b/landingpages/psg-neymar/index.html
@@ -39,5 +39,17 @@
             <img class="time2" src="imagens/psg-logo.png" alt="">
             <h4 id="time2">PSG</h4>
     </div>
+
+    <div class="imagen-artigo">
+        <main class="fundo-artigo" >
+            <h1 class="titulo-artigo">BEM VINDO AO PARC DES PRINCES</h1>
+
+            <p class="artigo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+            </p>
+
+            <button class="botao-artigo">LER MAIS</button>
+        </main>
+    </div>
 </body>
 </html>
