--- a/landingpages/psg-neymar/index.html
+++ b/landingpages/psg-neymar/index.html
@@ -51,5 +51,43 @@
             <button class="botao-artigo">LER MAIS</button>
         </main>
     </div>
+
+    <section class="noticia">
+
+        <h1 class="titulo-noticia">ULTIMAS NOTÍCIAS</h1>
+
+        <div class="equipe-principal">
+
+            <div class="cards">
+               <img src="imagens/messi.png" alt="">
+               <div class="paragrafo">
+                <p>EQUIPE PRINCIPAL</p>
+                <span>17 Maio 2022</span>
+               </div>
+               <h4>Messi deseja comprar 35% das ações <br> de clube.</h4>
+            </div>
+
+
+            <div class="cards">
+                <img src="imagens/mbpe01.png" alt="">
+                <div class="paragrafo">
+                 <p>EQUIPE PRINCIPAL</p>
+                 <span>15 Maio 2022</span>
+                </div>
+                <h4>Tudo sobre a vitória em Montpellier</h4>
+             </div>
+
+
+             <div class="cards">
+                <img src="imagens/mbpe02.png" alt="">
+                <div class="paragrafo">
+                 <p>EQUIPE PRINCIPAL</p>
+                 <span>15 Maio 2022</span>
+                </div>
+                <h4>Mbappé no Liverpool?</h4>
+             </div>
+        </div>
+        <button class="botao-noticias">CARREGAR MAIS</button>
+    </section>
 </body>
 </html>
