--- a/weatherAplication/Index.html
+++ b/weatherAplication/Index.html
@@ -18,12 +18,11 @@
         <h1 class="text-center">Informações do clima</h1>
         <form data-js="insert-location" class="form-center">
             <label for="city">Insira o nome de uma Cidade</label>
-            <input class="for-input" type="text" value="São Paulo
-            " name="city" placeholder="Ex:Miami" autofocus>
+            <input class="for-input" type="text" name="city" placeholder="Ex:Miami" autofocus>
         </form>
         <div data-js="city-card" class="container-card d-none">
 
-            <img data-js="time" src="src/400X300.png" class="card-img">
+            <img data-js="time" src="" class="card-img">
 
             <div data-js="time-icon" class="icon-weather">
                 <img src="src/icons/1.svg" alt="">
